# learny

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml
static/: style.css
templates/: index.html
