[project]
name = "learny"
version = "0.1.0"
description = "A simple web app for multiplication practice."
authors = [{ name = "Your Name", email = "you@example.com" }] # Please update this
requires-python = ">=3.8"
dependencies = [
    "flask",
]

[project.optional-dependencies]
dev = [
    # Add development tools here if needed, e.g., linters, formatters
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Optional: You can add uv-specific configurations if needed,
# but often none are required for basic usage.
# [tool.uv.sources]
# Specify custom indexes if needed
