[project]
name = "learny"
version = "0.1.0"
description = "A simple web app for multiplication practice."
authors = [
    { name = "Your Name", email = "you@example.com" },
] # Please update this
requires-python = ">=3.13"
dependencies = [
    "flask",
    "pydantic",
    "pydantic-settings",
    "requests>=2.32.3",
]

# Optional: You can add uv-specific configurations if needed,
# but often none are required for basic usage.
# [tool.uv.sources]
# Specify custom indexes if needed
